--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <div id="app"></div>
+    <script src="http://localhost:<%= WEBSOCKET_PORT %>/socket.io/socket.io.js"></script>
 </body>
 </html>
